[package]
name = "napi-reqwest-async"
version = "0.1.0"
authors = ["Chris Allen <cma@bitemyapp.com>"]
license = "MIT"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "napi_reqwest_async"
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.7.1-napi", default-features = false, features = ["default-panic-hook", "napi-6", "event-queue-api", "try-catch-api"] }
once_cell = "1.7.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.2", features = ["full"] }
url = "^2"
