[package]
name = "neon-bigint-task"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "neon_bigint_task"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2"

[dependencies]
neon = "0.2"
num-bigint = "0.2"
num-traits = "0.2"
