[package]
name = "async-sqlite"
version = "0.1.0"
description = "Neon Async SQLite"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = "0.25"

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]
