[package]
name = "async-sqlite"
version = "0.1.0"
description = "Neon Async SQLite"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = "0.25"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
