[package]
name = "tokio-callback"
version = "0.1.0"
description = "Neon Tokio and Rust Async callback example"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "1", features = ["futures"] }
once_cell = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
neon-serde2 = { git = "https://github.com/druide/neon-serde" }
