[package]
name = "tokio-fetch"
version = "0.1.0"
description = "Neon Tokio and Rust Async Example"
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon.workspace = true
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1", features = ["derive"] }
